# small-angle-scatter

./: .gitignore  CITATION.cff  LICENSE  LICENSE.md  README.md  pyproject.toml
data/: xcomH2O.tsv
notebooks/: 01_run_simulation.ipynb  02_fig_energy_exit_spectra.ipynb  03_fig_lor_displacement_distributions.ipynb  04_fig_gain_vs_fwhm.ipynb  05_table_simulation_summary.ipynb  d_distribution.ipynb  d_distribution_fixed_detector_ring.ipynb  d_distribution_fixed_detector_ring_axial_transverse_split.ipynb  energy_spectra.ipynb  gain_vs_fwhm.ipynb  gain_vs_fwhm_fixed_detector_ring.ipynb  gain_vs_fwhm_fixed_detector_ring_axial_transverse_split.ipynb  run_MC.ipynb  table_of_simulation_results.ipynb  table_of_simulation_results_fixed_detector_cylinder.ipynb
notebooks/data_validation/: linear_attenuation_water.ipynb
src/MC/: water_cylinder.py
src/sas_pet/: __init__.py  constants.py  fwhm_gain.py  geometry.py  lor_offset.py  materials.py  physics.py  plotstyle.py  simulate.py  spectra.py  transport.py  utils.py  xcom.py
src/sas_pet/analysis/: fates.py
